--- a/index.html
+++ b/index.html
@@ -22,32 +22,32 @@
     <ul class="menuList">
       <li class="menuListItem">
         <button class="menuTopButton">
-          <a class="menuListLink" href="#">Услуги</a>
+          <a class="menuListLink" href="#services">Услуги</a>
         </button>
       </li>
       <li class="menuListItem">
         <button class="menuTopButton">
-          <a class="menuListLink" href="#">Почему Мы?</a>
+          <a class="menuListLink" href="#whyAreWe">Почему Мы?</a>
         </button>
       </li>
       <li class="menuListItem">
         <button class="menuTopButton">
-          <a class="menuListLink" href="#">Галерея</a>
+          <a class="menuListLink" href="#howAreWeWorking">Как мы работаем</a>
         </button>
       </li>
       <li class="menuListItem">
         <button class="menuTopButton">
-          <a class="menuListLink" href="#">Как мы работаем</a>
+          <a class="menuListLink" href="#certificate">Галерея</a>
         </button>
       </li>
       <li class="menuListItem">
         <button class="menuTopButton">
-          <a class="menuListLink" href="#">Заказать сайт</a>
+          <a class="menuListLink" href="#question">Задать вопрос</a>
         </button>
       </li>
       <li class="menuListItem">
         <button class="menuTopButton">
-          <a class="menuListLink" href="#">Контакты</a>
+          <a class="menuListLink" href="#contacts">Контакты</a>
         </button>
       </li>
     </ul>
@@ -69,8 +69,8 @@
 </header>
 
   <section class="services container">
-    <img align="right" src="images/landing_page_1.png"/>
-    <h2 class="titleSection">Что мы предлагаем для вас разработать:</h2>
+    <img class="image-services" src="images/landing_page_1.png"/>
+    <h2 class="titleSection" id="services">Что мы предлагаем для вас разработать:</h2>
     <dl>
       <dt><h3>Landing Page</h3></dt>
         <dd>
@@ -88,7 +88,7 @@
   </section>
 
   <section class="whyAreWe container">
-    <h3 class="titleSection">Почему с нами работать удобно и выгодно?</h3>
+    <h3 class="titleSection" id="whyAreWe">Почему с нами работать удобно и выгодно?</h3>
     <div class="whyAreWeContent cntentBlock">
       <div class="whyAreWeBlockLeft">
         <p class="pLeft">
@@ -130,7 +130,7 @@
   </section>
 
   <section class="howAreWeWorking container cntentBlock">
-    <h3 class="titleSection">Как происходит верстка вашего сайта?</h3>
+    <h3 class="titleSection" id="howAreWeWorking">Как происходит верстка вашего сайта?</h3>
     <div class="text-working">
       <p class="text-working">
         Для заказа сайта нажмите на кнопку «Заказать сайт» и заполните анкету. После заполнения анкеты вы сразу увидите цену на разработку вашего сайта.
@@ -158,7 +158,7 @@
   </section>
 
   <section class="certificate container">
-    <h3 class="titleSection">Сертификаты:</h3>
+    <h3 class="titleSection" id="certificate">Сертификаты:</h3>
     <div class="sliderCertificate">
       <div class = "slider-certificat">
         <div class="myCertificate fade">
@@ -192,7 +192,7 @@
   </section>-->
 
   <section class="question container">
-  <h3 class="questionTitle titleSection">Задать вопрос или Заказать сайт</h3>
+  <h3 class="questionTitle titleSection" id="question">Задать вопрос или Заказать сайт</h3>
   
   <form>
     <table cellpadding="5">
@@ -218,7 +218,7 @@
 
 <footer class="footer">
   <div class="footerBlok">
-    <h2 class="titleSection">Контакты:</h2>
+    <h2 class="titleSection" id="contacts">Контакты:</h2>
           <b>Разработчик: Олег</b><br />
           <b>тел: <a class="footerTel" href="+380636230398">+38 (063) 623-03-98</a></b><br />
           <b>e-mail: gribovo03@gmail</b>
@@ -226,22 +226,22 @@
   <div class="menuFooter">
     <ul class="footerMenu">
       <li class="footerMenuLi">
-        <a class="menuListFooter" href="#">Услуги</a>
+        <a class="menuListFooter" href="#services">Услуги</a>
       </li>
       <li class="footerMenuLi">
-        <a class="menuListFooter" href="#">Почему Мы?</a>
+        <a class="menuListFooter" href="#whyAreWe">Почему Мы?</a>
+      <li class="footerMenuLi">
+        <a class="menuListFooter" href="#howAreWeWorking">Как мы работаем</a>
+      </li>
+    </li>
+    <li class="footerMenuLi">
+      <a class="menuListFooter" href="#certificate">Галерея</a>
+    </li>
+      <li class="footerMenuLi">
+        <a class="menuListFooter" href="#question">Задать вопрос</a>
       </li>
       <li class="footerMenuLi">
-        <a class="menuListFooter" href="#">Галерея</a>
-      </li>
-      <li class="footerMenuLi">
-        <a class="menuListFooter" href="#">Как мы работаем</a>
-      </li>
-      <li class="footerMenuLi">
-        <a class="menuListFooter" href="#">Задать вопрос</a>
-      </li>
-      <li class="footerMenuLi">
-        <a class="menuListFooter" href="#">Контакты</a>
+        <a class="menuListFooter" href="#contacts">Контакты</a>
 
         </li>
     </ul>
