--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 
  <title>Разработка Landing Page, верстка сайта</title>
 
+ <!--style_all-->
  <link rel="stylesheet" href="style.css" />
-<!--style_all-->
+
 </head>
   
 <body>
@@ -16,51 +17,40 @@
 <header class="header">
 
 <div class="container">
-  <div class="headerTop">
+  <div class="header-top">
+    
     <!--menu-->
     <nav class="menu">
-    <ul class="menuList">
-      <li class="menuListItem">
-        <button class="menuTopButton">
-          <a class="menuListLink" href="#services">Услуги</a>
-        </button>
+    <ul class="menu__list">
+      <li class="menu__list-item">
+          <a class="menu__list-link" href="#services">Услуги</a>
       </li>
-      <li class="menuListItem">
-        <button class="menuTopButton">
-          <a class="menuListLink" href="#whyAreWe">Почему Мы?</a>
-        </button>
+      <li class="menu__list-item">
+          <a class="menu__list-link" href="#whyAreWe">Почему Мы?</a>
       </li>
-      <li class="menuListItem">
-        <button class="menuTopButton">
-          <a class="menuListLink" href="#howAreWeWorking">Как мы работаем</a>
-        </button>
+      <li class="menu__list-item">
+          <a class="menu__list-link" href="#howAreWeWorking">Как мы работаем</a>
       </li>
-      <li class="menuListItem">
-        <button class="menuTopButton">
-          <a class="menuListLink" href="#certificate">Галерея</a>
-        </button>
+      <li class="menu__list-item">
+          <a class="menu__list-link" href="#certificate">Галерея</a>
       </li>
-      <li class="menuListItem">
-        <button class="menuTopButton">
-          <a class="menuListLink" href="#question">Задать вопрос</a>
-        </button>
+      <li class="menu__list-item">
+          <a class="menu__list-link" href="#question">Задать вопрос</a>
       </li>
-      <li class="menuListItem">
-        <button class="menuTopButton">
-          <a class="menuListLink" href="#contacts">Контакты</a>
-        </button>
+      <li class="menu__list-item">
+          <a class="menu__list-link" href="#contacts">Контакты</a>
       </li>
     </ul>
     </nav>
   </div>
-  <h1 class="titleHeader">
+  <h1 class="title-header">
     Landing Page Now!    
     <span>Качественный сайт быстро и недорого</span>
   </h1>
 
-  <div class="orderForm">
-    <button class="orderFormButton">
-      <a class="orderFormLink" href="#">
+  <div class="order-form">
+    <button class="order-form__button">
+      <a class="order-form __link" href="#">
         <b><i>Заказать сайт сейчас!</i></b>
       </a>
     </button>
@@ -70,7 +60,7 @@
 
   <section class="services container">
     <img class="image-services" src="images/landing_page_1.png"/>
-    <h2 class="titleSection" id="services">Что мы предлагаем для вас разработать:</h2>
+    <h2 class="title-section" id="services">Что мы предлагаем для вас разработать:</h2>
     <dl>
       <dt><h3>Landing Page</h3></dt>
         <dd>
@@ -87,50 +77,50 @@
     </dl>
   </section>
 
-  <section class="whyAreWe container">
-    <h3 class="titleSection" id="whyAreWe">Почему с нами работать удобно и выгодно?</h3>
-    <div class="whyAreWeContent cntentBlock">
-      <div class="whyAreWeBlockLeft">
-        <p class="pLeft">
-          <img class="whyAreWeImgLeft" src="images/whyAreWe_sity.png">
+  <section class="why-are-we container">
+    <h3 class="title-section" id="whyAreWe">Почему с нами работать удобно и выгодно?</h3>
+    <div class="why-are-we__content">
+      <div class="why-are-we__block-left">
+        <p class="p-left">
+          <img class="why-are-we__img-left" src="images/whyAreWe_sity.png">
           Первая и самая главная причина работать именно с нами – это качество работы! Мы не используем чужие шаблоны. Все от начала и до конца пишется вручную. От вас требуется только пример шаблона и контент.
         </p>
       </div>
-      <div class="whyAreWeBlockRight cntentBlock">
-        <img class="whyAreWeImgRight" src="images/whyAreWe_Pay.png">
-        <p class="pRight">
+      <div class="why-are-we__block-right">
+        <img class="why-are-we__img-right" src="images/whyAreWe_Pay.png">
+        <p class="p-right">
           Мы не работаем по предоплате, весь расчет происходит после полной сдачи сайта заказчику.
         </p>
       </div>
-      <div class="whyAreWeBlockLeft cntentBlock">
-        <p class="pLeft">
-          <img class="whyAreWeImgLeft" src="images/whyAreWe_sity_speed.png">
+      <div class="why-are-we__block-left">
+        <p class="p-left">
+          <img class="why-are-we__img-left" src="images/whyAreWe_sity_speed.png">
           Landing page и Сайт-визитка сдаем от 1 до 2-х дней. Информационный сайт занимает больше времени, сроки сдачи зависят от количества пожеланий заказчика.
         </p>
       </div>
-      <div class="whyAreWeBlockRight cntentBlock">
-        <img class="whyAreWeImgRight" src="images/whyAreWe_browser_1.png" alt="Адаптивная Верстка">
-        <p class="pRight">
+      <div class="why-are-we__block-right">
+        <img class="why-are-we__img-right" src="images/whyAreWe_browser_1.png" alt="">
+        <p class="p-right">
           Сайт настраивается для работы в браузерах Internet Explorer, Firefox, Chrome, Safari, Opera.
         </p>
       </div>
-      <div class="whyAreWeBlockLeft cntentBlock">
-        <img class="whyAreWeImgLeft" src="images/whyAreWe_adaptive.png">
-        <p class="pLeft">
+      <div class="why-are-we__block-left">
+        <img class="why-are-we__img-left" src="images/whyAreWe_adaptive.png">
+        <p class="p-left">
           Под все сайты делается адаптивная верстка и тестируется на разных размерах дисплеев.
         </p>
       </div>
-      <div class="whyAreWeBlockRight cntentBlock">
-        <p class="pRight">
-          <img class="whyAreWeImgRight" src="images/whyAreWe_sity_host.png" alt="">
+      <div class="why-are-we__block-right">
+        <p class="p-right">
+          <img class="why-are-we__img-right" src="images/whyAreWe_sity_host.png" alt="">
           Помогаем выбрать самый оптимальный Хостинг с бесплатным Доменом.
         </p>
       </div>
     </div>  
   </section>
 
-  <section class="howAreWeWorking container cntentBlock">
-    <h3 class="titleSection" id="howAreWeWorking">Как происходит верстка вашего сайта?</h3>
+  <section class="how-working container">
+    <h3 class="title-section" id="howAreWeWorking">Как происходит верстка вашего сайта?</h3>
     <div class="text-working">
       <p class="text-working">
         Для заказа сайта нажмите на кнопку «Заказать сайт» и заполните анкету. После заполнения анкеты вы сразу увидите цену на разработку вашего сайта.
@@ -148,9 +138,9 @@
         После всего выше перечисленного, если нет ни каких замечаний, происходит оплата за работу.
       </p>
     </div>
-    <div class="orderForm">
-      <button class="orderFormButton">
-        <a class="orderFormLink" href="#">
+    <div class="order-form">
+      <button class="order-form__button">
+        <a class="order-formL__link" href="#">
           <b><i>Заказать сайт сейчас!</i></b>
         </a>
       </button>
@@ -158,41 +148,34 @@
   </section>
 
   <section class="certificate container">
-    <h3 class="titleSection" id="certificate">Сертификаты:</h3>
-    <div class="sliderCertificate">
-      <div class = "slider-certificat">
-        <div class="myCertificate fade">
+    <h3 class="title-section" id="certificate">Сертификаты:</h3>
+    <div class="slider-certificate">
+      <div class = "slider-certificat__block">
+        <div class="my-certificate">
             <img src="images/html_certificate.jpg" alt="Сертификаты HTML">
         </div>
-        <div class="myCertificate fade">
+        <div class="my-certificate">
             <img src="images/css_certificate.jpg" alt="Сертификаты CSS">
         </div>
-        <div class="myCertificate fade">
+        <div class="my-certificate">
             <img src="images/js_certificate.jpg" alt="Сертификаты JavaScript">
         </div>
       </div>
-        <a class="prev" onclick="plusSlides(-1)">&#10094</a>
-        <a class="next" onclick="plusSlides(1)">&#10095</a>
     </div>
-    <div style="text-align:center;">
-      <span class="dot" onclick="currentSlide(1)"></span>
-      <span class="dot" onclick="currentSlide(2)"></span>
-      <span class="dot" onclick="currentSlide(3)"></span>
-  </div>
   <div class="text-slider">
     Век живи – век учись!
   </div>
   </section>
 
  <!-- <section class="gallery container">
-    <h3 class="titleSection">Примеры работ:</h3>
+    <h3 class="title-section">Примеры работ:</h3>
     <div class="slider1">
-      <div class="certificate"><img src="images/.jpg" alt=""></div>
+      <div class="gallery-__img"><img src="images/.jpg" alt=""></div>
     </div>
   </section>-->
 
   <section class="question container">
-  <h3 class="questionTitle titleSection" id="question">Задать вопрос или Заказать сайт</h3>
+  <h3 class="question-title title-section" id="question">Задать вопрос или Заказать сайт</h3>
   
   <form>
     <table cellpadding="5">
@@ -204,9 +187,9 @@
       <tr><td><input id="email" name="email" type="email"/></td></tr>
       <tr><td><b>Ваш вопрос:</b></td></tr>
       <tr><td><textarea name="comment" cols="80" rows="5"></textarea></p></td></tr>
-      <tr class="feedBack">
-        <td><button type="buttonQuestion">Отправить</button></td>
-        <td><button type="buttonOrderForm">Заказать сайт</button></td>
+      <tr class="feed-back">
+        <td><button type="button-question">Отправить</button></td>
+        <td><button type="button-order-form">Заказать сайт</button></td>
       </tr>
     </table>
   </form>
@@ -217,32 +200,31 @@
 </body>
 
 <footer class="footer">
-  <div class="footerBlok">
-    <h2 class="titleSection" id="contacts">Контакты:</h2>
+  <div class="footer__blok">
+    <h2 class="title-section" id="contacts">Контакты:</h2>
           <b>Разработчик: Олег</b><br />
-          <b>тел: <a class="footerTel" href="+380636230398">+38 (063) 623-03-98</a></b><br />
+          <b>тел: <a class="footer-tel" href="+380636230398">+38 (063) 623-03-98</a></b><br />
           <b>e-mail: gribovo03@gmail</b>
   </div>
-  <div class="menuFooter">
-    <ul class="footerMenu">
-      <li class="footerMenuLi">
-        <a class="menuListFooter" href="#services">Услуги</a>
+  <div class="menu__footer">
+    <ul class="footer__menu">
+      <li class="footer__menu-list">
+        <a class="footer__menu-link" href="#services">Услуги</a>
       </li>
-      <li class="footerMenuLi">
-        <a class="menuListFooter" href="#whyAreWe">Почему Мы?</a>
-      <li class="footerMenuLi">
-        <a class="menuListFooter" href="#howAreWeWorking">Как мы работаем</a>
+      <li class="footer__menu-list">
+        <a class="footer__menu-link" href="#whyAreWe">Почему Мы?</a>
+      <li class="footer__menu-list">
+        <a class="footer__menu-link" href="#howAreWeWorking">Как мы работаем</a>
       </li>
     </li>
-    <li class="footerMenuLi">
-      <a class="menuListFooter" href="#certificate">Галерея</a>
+    <li class="footer__menu-list">
+      <a class="footer__menu-link" href="#certificate">Галерея</a>
     </li>
-      <li class="footerMenuLi">
-        <a class="menuListFooter" href="#question">Задать вопрос</a>
+      <li class="footer__menu-list">
+        <a class="footer__menu-link" href="#question">Задать вопрос</a>
       </li>
-      <li class="footerMenuLi">
-        <a class="menuListFooter" href="#contacts">Контакты</a>
-
+      <li class="footer__menu-list">
+        <a class="footer__menu-link" href="#contacts">Контакты</a>
         </li>
     </ul>
   </div>
