animation buttons in the footer menu and order-form__button

--- a/index.html
+++ b/index.html
@@ -47,14 +47,6 @@
     Landing Page Now!    
     <span>Качественный сайт быстро и недорого</span>
   </h1>
-
-  <div class="order-form">
-    <button class="order-form__button">
-      <a class="order-form __link" href="#">
-        <b><i>Заказать сайт сейчас!</i></b>
-      </a>
-    </button>
-  </div>
 </div>
 </header>
 
@@ -189,7 +181,13 @@
       <tr><td><textarea name="comment" cols="80" rows="5"></textarea></p></td></tr>
       <tr class="feed-back">
         <td><button type="button-question">Отправить</button></td>
-        <td><button type="button-order-form">Заказать сайт</button></td>
+        <td >  <div class="order-form">
+          <button class="order-form__button">
+            <a class="order-form __link" href="#">
+              <b><i>Заказать сайт сейчас!</i></b>
+            </a>
+          </button>
+        </div></td>
       </tr>
     </table>
   </form>
